@@ -216,7 +216,7 @@ class Plt(object):
             # quick and dirty... slurp it all in one go
             datafmt = h['bsaflag']+str(nentries)+self._data_bintype
             a = numpy.array(unpack(datafmt, plt.read(calcsize(datafmt))))
-        self.header['filename'] = self.filename
+        self.header['filename'] = str(self.filename)
         self.array = a.reshape(h['nz'], h['ny'], h['nx']).transpose()  # unpack plt in reverse!!
         self.delta = self._delta()
         self.origin = numpy.array([h['xmin'], h['ymin'], h['zmin']]) + 0.5*numpy.diagonal(self.delta)
